# ECAP5-TREQ

./: .coveragerc  .pylintrc  README.md  config.cmake  pyproject.toml  test.csv
.github/workflows/: automatic-checks.yml
docs/source/: conf.py  configuration.rst  documentation.rst  ecap5_treq.rst  ecap5_treq.tests.rst  index.rst  install.rst  modules.rst  traceability_matrix.rst  usage.rst
docs/source/documentation/: analysis.rst  check.rst  config.rst  html.rst  log.rst  main.rst  matrix.rst  report.rst  req.rst
src/ecap5_treq/: analyse.py  analysis.py  check.py  config.py  html.py  log.py  main.py  matrix.py  parse.py  report.py  req.py
src/ecap5_treq/tests/: test_analyse.py  test_analysis.py  test_check.py  test_config.py  test_html.py  test_log.py  test_main.py  test_matrix.py  test_report.py  test_req.py
tests/: config.json  sample-matrix.csv  uptodate-matrix.csv  valid-config.json
tests/checks/module1/: main.cpp
tests/data/: tb_one.csv  tb_two.csv
tests/reqs/document1/: main.tex
tests/reqs/document2/: main.tex
tests/spec/document2/: main.tex
tests/spec/document3/: main.tex
tests/testcase1/: sample-matrix.csv
tests/testcase1/spec/document2/: main.tex
tests/testcase1/spec/document3/: main.tex
tests/testcase1/testdata/: tb_one.csv
tests/testcase1/tests/module1/: main.cpp
tests/testcase2/: valid-config.json
tests/testcase2/tests/module3/: main.cpp
tests/tests/module2/: tb_regm.cpp
