#           __        _
#  ________/ /  ___ _(_)__  ___
# / __/ __/ _ \/ _ `/ / _ \/ -_)
# \__/\__/_//_/\_,_/_/_//_/\__/
# 
# Copyright (C) Clément Chaine
# This file is part of ECAP5-TREQ <https://github.com/cchaine/ECAP5-TREQ>
# 
# ECAP5-TREQ is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
# 
# ECAP5-TREQ is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with ECAP5-TREQ.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0"
]

[project]
name = "ECAP5-TREQ"
version = "0.1.0"
authors = [
  { name = "Clément Chaine", email="clement.chaine25@gmail.com" }
]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  'Sphinx ~= 7.2.6',
  'sphinx_rtd_theme ~= 2.0.0',
  'pytest ~= 7.4.3',
  'mock ~= 5.1.0'
]

[project.urls]
"Homepage" = "https://github.com/cchaine/ECAP5-TREQ"
"Bug Tracker" = "https://github.com/cchaine/ecap5-treq/ECAP5-TREQ"

[project.scripts]
ecap5-treq = "ecap5_treq.main:main"
